[package]
authors = ["Apollo Devs <shared@apollo.farm>"]
edition = "2021"
name = "cw-dex-router"
version = "0.4.0"
readme = "README.md"
repository = "https://github.com/apollodao/cw-dex-router"
homepage = "https://apollo.farm"
documentation = "https://docs.rs/cw-dex-router"
license = "MPL-2.0"
description = "A cosmwasm contract for routing swaps across multiple dexes."
keywords = ["cosmwasm", "dex", "router", "osmosis", "astroport"]

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
default = []
# use library feature to disable all instantiate/execute/query exports
library = []
osmosis = ["cw-dex-osmosis"]
astroport = ["cw-dex-astroport"]

[package.metadata.optimizer]
builds = [
  { name = "astroport", features = ["astroport"] },
  { name = "osmosis", features = ["osmosis"] },
]

[dependencies]
cosmwasm-std = "1.5.4"
cosmwasm-schema = "1.2.1"
apollo-cw-asset = "0.1.0"
cw-controllers = "1.0.1"
cw-dex = "0.5.3"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
cw20 = "1.0.1"
thiserror = "1.0.38"
apollo-utils = "0.1.0"
cw-dex-osmosis = { version = "0.1.0", optional = true }
cw-dex-astroport  = { version = "0.2.0-rc.1", optional = true}

[dev-dependencies]
cw-it = { version = "0.3.1", features = ["osmosis-test-tube"] }
test-case = "3.0.0"
serde_json = "1.0.107"

# Used in osmosis tests, should migrate to new cw-it at some point
osmosis-testing = { git = "https://github.com/apollodao/osmosis-rust", rev = "430236bd63f26d618e11e59709a56c808c4d427c" }
